fix bug gap

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,7 @@ body {
   font-family: "Bebas Neue", sans-serif; 
 }
 
-/* html {
-  font-size: 12px;
-  color: #000;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-} */
+
 
 
 :root {
@@ -53,8 +49,6 @@ body {
   align-items: center;
   justify-content: center;
   opacity: 90%;
-  
-  
 }
 
 .carousel::before {
@@ -333,7 +327,7 @@ body {
 
 /* Garantindo que o carrossel não seja afetado */
 .carousel {
-  margin-top: 20px; /* Adiciona um espaço entre o logo e o carrossel em dispositivos móveis */
+  margin-top: px; /* Adiciona um espaço entre o logo e o carrossel em dispositivos móveis */
 }
 
 
